[gd_scene load_steps=33 format=3 uid="uid://bdaup8us6indt"]

[ext_resource type="Script" path="res://UI/Cooking Machine.gd" id="1_kbku0"]
[ext_resource type="AudioStream" uid="uid://3iyonybijyi4" path="res://Audio/bubbles-003-6397.mp3" id="2_8ylxa"]
[ext_resource type="Texture2D" uid="uid://cl73ats0hi7fo" path="res://Textures/Cooker/Dynamic Components/CookerBackground.png" id="2_x3nsb"]
[ext_resource type="Texture2D" uid="uid://bvp0v7xnw8xug" path="res://Textures/Cooker/Cooker.png" id="3_2r3jm"]
[ext_resource type="AudioStream" uid="uid://d0xtcb2642skc" path="res://Audio/service-bell-ring-14610.mp3" id="3_b8voa"]
[ext_resource type="Texture2D" uid="uid://cvrpnj6goj8b6" path="res://Textures/Cooker/Dynamic Components/cooker door.png" id="3_vdxa7"]
[ext_resource type="AudioStream" uid="uid://c34825t1w0uv5" path="res://Audio/button-124476.mp3" id="4_4gf4c"]
[ext_resource type="Texture2D" uid="uid://egr30gambv2r" path="res://Textures/Cooker/Dynamic Components/CookerCook.png" id="4_cb820"]
[ext_resource type="Texture2D" uid="uid://pfmom6i8hgmr" path="res://Textures/Cooker/Dynamic Components/CookerDiscard.png" id="5_3ji33"]
[ext_resource type="Shader" path="res://HueShift.gdshader" id="6_23yya"]
[ext_resource type="PackedScene" uid="uid://dyolw6xrb5xnj" path="res://UI/Cooker Slot/cooker_slot.tscn" id="6_fdkva"]
[ext_resource type="Texture2D" uid="uid://c1em1ly0cau8p" path="res://Textures/Cooker/Dynamic Components/CookerSlotTwo.png" id="8_nqkvw"]
[ext_resource type="Texture2D" uid="uid://bl22hjq3nmoul" path="res://Textures/Cooker/Dynamic Components/CookerSlotThree.png" id="9_7dw2b"]
[ext_resource type="Texture2D" uid="uid://w5djhdml0o0s" path="res://Textures/Cooker/Dynamic Components/CookerSlotFour.png" id="10_dynql"]
[ext_resource type="Texture2D" uid="uid://c1w1hrxppe8q5" path="res://Textures/Cooker/Dynamic Components/CookerSlotFive.png" id="11_iuaq4"]
[ext_resource type="Texture2D" uid="uid://bdo4v7lgcq1uj" path="res://Textures/Cooker/Dynamic Components/CookerSlotSix.png" id="12_203p5"]
[ext_resource type="Texture2D" uid="uid://crff8u2vdgs5a" path="res://Textures/Food/Bagel Sandwich.png" id="12_ybd1g"]
[ext_resource type="Texture2D" uid="uid://cjjekrq5i5gea" path="res://Textures/Cooker/Dynamic Components/CookerIndicator.png" id="13_rmgyy"]
[ext_resource type="Texture2D" uid="uid://cpelkfxdwl2u6" path="res://Textures/Food/Salt.png" id="14_cbf6m"]

[sub_resource type="Animation" id="Animation_b4vth"]
resource_name = "cooking"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.31, 0.6, 0.9, 1.2, 1.5, 1.79),
"transitions": PackedFloat32Array(0.189465, 4.14106, 0.189465, 4.14106, 0.189465, 4.14106, 0.189465),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.03891, 0.902341), Vector2(1, 1), Vector2(1.03891, 0.902341), Vector2(1, 1), Vector2(1.03891, 0.902341), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_8ylxa"), ExtResource("3_b8voa")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_euoo8"]
resource_name = "door_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cooker/CookerDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.116629, 1),
"update": 0,
"values": [Vector2(0, -300), Vector2(0, -44)]
}

[sub_resource type="Animation" id="Animation_pbqfx"]
resource_name = "door_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cooker/CookerDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.217638, 3.605),
"update": 0,
"values": [Vector2(0, -44), Vector2(0, -300)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v38rn"]
_data = {
"cooking": SubResource("Animation_b4vth"),
"door_close": SubResource("Animation_euoo8"),
"door_open": SubResource("Animation_pbqfx")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfgam"]
resource_local_to_scene = true
shader = ExtResource("6_23yya")
shader_parameter/is_on = null
shader_parameter/is_on_green = false
shader_parameter/is_on_red = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ahoxl"]
shader = ExtResource("6_23yya")
shader_parameter/is_on = null
shader_parameter/is_on_green = null
shader_parameter/is_on_red = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h66p7"]
resource_local_to_scene = true
shader = ExtResource("6_23yya")
shader_parameter/is_on = false
shader_parameter/is_on_green = false
shader_parameter/is_on_red = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3arqw"]
resource_local_to_scene = true
shader = ExtResource("6_23yya")
shader_parameter/is_on = false
shader_parameter/is_on_green = false
shader_parameter/is_on_red = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gbn8d"]
resource_local_to_scene = true
shader = ExtResource("6_23yya")
shader_parameter/is_on = false
shader_parameter/is_on_green = false
shader_parameter/is_on_red = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jnlyh"]
resource_local_to_scene = true
shader = ExtResource("6_23yya")
shader_parameter/is_on = false
shader_parameter/is_on_green = false
shader_parameter/is_on_red = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wy2ra"]
resource_local_to_scene = true
shader = ExtResource("6_23yya")
shader_parameter/is_on = false
shader_parameter/is_on_green = false
shader_parameter/is_on_red = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cyat0"]
resource_local_to_scene = true
shader = ExtResource("6_23yya")
shader_parameter/is_on = false
shader_parameter/is_on_green = false
shader_parameter/is_on_red = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x3a5m"]
shader = ExtResource("6_23yya")
shader_parameter/is_on = false
shader_parameter/is_on_green = false
shader_parameter/is_on_red = false

[node name="Cooking Machine" type="StaticBody2D"]
script = ExtResource("1_kbku0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v38rn")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4gf4c")
volume_db = 3.0

[node name="Cooker" type="Node2D" parent="."]
position = Vector2(0, -399)

[node name="CookerBackground" type="Sprite2D" parent="Cooker"]
texture = ExtResource("2_x3nsb")

[node name="SpawnItem" type="Node2D" parent="Cooker"]

[node name="CookerDoor" type="Sprite2D" parent="Cooker"]
position = Vector2(0, -300)
scale = Vector2(1.105, 1.095)
texture = ExtResource("3_vdxa7")

[node name="CookerShape" type="Sprite2D" parent="Cooker"]
texture = ExtResource("3_2r3jm")

[node name="CookerCook" type="Sprite2D" parent="Cooker"]
material = SubResource("ShaderMaterial_vfgam")
position = Vector2(-1, 0)
texture = ExtResource("4_cb820")

[node name="CookerDiscard" type="Sprite2D" parent="Cooker"]
material = SubResource("ShaderMaterial_ahoxl")
position = Vector2(-1, 0)
texture = ExtResource("5_3ji33")

[node name="CookingSlots" type="Node2D" parent="Cooker"]

[node name="CookerSlot" parent="Cooker/CookingSlots" instance=ExtResource("6_fdkva")]
material = SubResource("ShaderMaterial_h66p7")

[node name="CookerSlot2" parent="Cooker/CookingSlots" instance=ExtResource("6_fdkva")]
material = SubResource("ShaderMaterial_3arqw")
texture = ExtResource("8_nqkvw")

[node name="TextureRect" parent="Cooker/CookingSlots/CookerSlot2" index="0"]
offset_left = -83.0
offset_top = -274.0
offset_right = 101.0
offset_bottom = -100.0
texture = ExtResource("12_ybd1g")

[node name="CookerSlot3" parent="Cooker/CookingSlots" instance=ExtResource("6_fdkva")]
material = SubResource("ShaderMaterial_gbn8d")
texture = ExtResource("9_7dw2b")

[node name="TextureRect" parent="Cooker/CookingSlots/CookerSlot3" index="0"]
offset_left = 88.0
offset_top = -279.0
offset_right = 274.0
offset_bottom = -107.0
texture = ExtResource("14_cbf6m")

[node name="CookerSlot4" parent="Cooker/CookingSlots" instance=ExtResource("6_fdkva")]
material = SubResource("ShaderMaterial_jnlyh")
texture = ExtResource("10_dynql")

[node name="TextureRect" parent="Cooker/CookingSlots/CookerSlot4" index="0"]
offset_left = -246.0
offset_top = -138.0
offset_right = -62.0
offset_bottom = 27.0
texture = ExtResource("12_ybd1g")

[node name="CookerSlot5" parent="Cooker/CookingSlots" instance=ExtResource("6_fdkva")]
material = SubResource("ShaderMaterial_wy2ra")
texture = ExtResource("11_iuaq4")

[node name="TextureRect" parent="Cooker/CookingSlots/CookerSlot5" index="0"]
offset_left = -82.0
offset_top = -155.0
offset_right = 102.0
offset_bottom = 30.0
texture = ExtResource("12_ybd1g")

[node name="CookerSlot6" parent="Cooker/CookingSlots" instance=ExtResource("6_fdkva")]
material = SubResource("ShaderMaterial_cyat0")
texture = ExtResource("12_203p5")

[node name="TextureRect" parent="Cooker/CookingSlots/CookerSlot6" index="0"]
offset_left = 89.0
offset_top = -140.0
offset_right = 266.0
offset_bottom = 22.0
texture = ExtResource("12_ybd1g")

[node name="CookerIndicator" type="Sprite2D" parent="Cooker"]
material = SubResource("ShaderMaterial_x3a5m")
position = Vector2(-4, 0)
texture = ExtResource("13_rmgyy")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-155, -77, 171, -80, 175, -431, 178, -615, 181, -694, 16, -705, 16, -745, 240, -755, 341, -667, 363, -499, 349, -256, 299, -99, 248, -40, 10, -8, -249, -43, -310, -195, -334, -376, -326, -606, -289, -718, -112, -750, -14, -737, -14, -699, -163, -699, -171, -612, -165, -434)

[node name="PlaceIngredients" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -289.0
offset_top = -716.0
offset_right = 310.0
offset_bottom = -376.0

[node name="Cook" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -240.0
offset_top = -366.0
offset_right = -40.0
offset_bottom = -225.0

[node name="Discard" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 61.0
offset_top = -357.0
offset_right = 246.0
offset_bottom = -229.0

[connection signal="pressed" from="PlaceIngredients" to="." method="cooking_machine_selected"]
[connection signal="pressed" from="Cook" to="." method="cook"]
[connection signal="pressed" from="Discard" to="." method="cancel"]

[editable path="Cooker/CookingSlots/CookerSlot2"]
[editable path="Cooker/CookingSlots/CookerSlot3"]
[editable path="Cooker/CookingSlots/CookerSlot4"]
[editable path="Cooker/CookingSlots/CookerSlot5"]
[editable path="Cooker/CookingSlots/CookerSlot6"]
